WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238355
String::split() should take in a StringView instead of a String
https://bugs.webkit.org/show_bug.cgi?id=238355
Summary
String::split() should take in a StringView instead of a String
Chris Dumez
Reported
2022-03-24 16:24:53 PDT
String::split() should take in a StringView instead of a String, to avoid unnecessary construction of Strings in some instances.
Attachments
Patch
(7.54 KB, patch)
2022-03-24 17:03 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-03-24 17:03:17 PDT
Created
attachment 455705
[details]
Patch
Geoffrey Garen
Comment 2
2022-03-24 19:44:29 PDT
Comment on
attachment 455705
[details]
Patch r=me
EWS
Comment 3
2022-03-24 21:22:59 PDT
Committed
r291848
(
248860@main
): <
https://commits.webkit.org/248860@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 455705
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-03-24 21:24:15 PDT
<
rdar://problem/90816865
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug