String::split() should take in a StringView instead of a String https://bugs.webkit.org/show_bug.cgi?id=238355

Reviewed by Geoffrey Garen.

Source/WebCore:

* accessibility/isolatedtree/AXIsolatedObject.cpp:
(WebCore::AXIsolatedObject::classList const):
Call the more efficient split(UChar) overload instead.

Source/WebKit:

* UIProcess/Inspector/socket/RemoteInspectorProtocolHandler.cpp:
Optimize by calling StringView::split() instead of String::split().

Source/WTF:

String::split() should take in a StringView instead of a String, to avoid unnecessary construction
of Strings in some instances.

* wtf/text/WTFString.cpp:
(WTF::String::splitInternal const):
(WTF::String::split const):
(WTF::String::splitAllowingEmptyEntries const):
* wtf/text/WTFString.h:



Canonical link: https://commits.webkit.org/248860@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291848 268f45cc-cd09-0410-ab3c-d52691b4dbfc